--- a/WorkFlow/Web.config
+++ b/WorkFlow/Web.config
@@ -23,7 +23,11 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  <pages>
+      <controls>
+        <add assembly="JuiceUI" namespace="Juice" tagPrefix="juice" />
+      </controls>
+    </pages></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
