--- a/WorkFlow/WorkFlow.csproj
+++ b/WorkFlow/WorkFlow.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\HtmlPrefixScopeExtensions.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DatabaseHelper.cs" />
     <Compile Include="Models\DataBaseModels\Categories.cs" />
@@ -470,8 +471,8 @@
     <Content Include="Views\Companies\_CompanyStatisticResultPartial.cshtml" />
     <Content Include="Views\CompanyInfo\VacancyInfo.cshtml" />
     <Content Include="Views\Vacancies\_VacanciesFilterFormPartial.cshtml" />
-    <Content Include="Views\Vacancies\_AddRequirementPartial.cshtml" />
     <Content Include="Views\Vacancies\_RequirementsListPartial.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Requirements.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
